fix: subscribers interaction on UI - couldn't be edited/deleted